Completed assignmenmt 2 part c

--- a/CP380-B3-BlockBlazor/appsettings.json
+++ b/CP380-B3-BlockBlazor/appsettings.json
@@ -11,6 +11,6 @@
     "url": "http://localhost:46688/PendingPayloads"
   },
   "BlockService": {
-    "blockurl": "http://localhost:46688/blocks"
+    "url": "http://localhost:46688/blocks"
   }
 }
